API adjustments to follow Zalando guidelines. Consequent backend and frontend changes.
