# am-ui/webcomponents/search-webcomponent/src/app/data/models/CategoriesResponse.ts
@@ -1,0 +1,5 @@
+import {Category} from './Category';
+
+export interface CategoriesResponse {
+  categories: Category[];
+}
